# gizra

./: Makefile  README.md  flake.nix  gizra.cabal
Application/Helper/: View.hs
Config/: Config.hs
Web/: FrontController.hs  Routes.hs  Types.hs
Web/Controller/: StyleGuide.hs
Web/Element/: Form.hs
Web/View/: Layout.hs  Prelude.hs
Web/View/ParagraphCtas/: Edit.hs  New.hs  Show.hs
Web/View/ParagraphQuotes/: Form.hs  Show.hs
Web/View/StyleGuide/: Index.hs  Show.hs
static/: app.js
tailwind/: tailwind.config.js
tests/: Main.hs
tests/Test/Web/View/LandingPages/: ShowSpec.hs
tests/Test/Web/View/ParagraphCtas/: ShowSpec.hs
